2004-03-14  Ted Gould <ted@gould.cx>

	* src/extension/extension.cpp, src/extension/extension.h,
      src/extension/internal/ps.cpp: Adding in parameters for extensions.
	  This will make it so that extensions can have easy settings that
	  are used.  They are not currently persistent - but that will be
	  a future feature.

2004-03-14  MenTaLguY <mental@rydia.net>

	* src/xml/repr.cpp: existing listeners were getting dropped when new
	  listeners were added; this fix makes the behavior documented in
	  bug #896706 a little worse, but fixes bug #915913

	* src/sp-use.cpp: SPUse does not need to manually detach its child
	  anymore, so now it doesn't

	* src/sp-object.cpp: detach our SPRepr listener before we start
	  releasing our children, which makes listener removal faster (since
	  we are then always removing from the beginning of the listener
	  list -- i.e. removing in roughly the order in which they were added)
	  This should help bug #896706 a little more.

2004-03-14  rejon <jon@protofunk.org>

    * src/toolbox.cpp share/icons/icons.svg: Cleaned the file up to coding 
      standards. I also have begun to add new icons to our program.

2004-03-13  MenTaLguY <mental@rydia.net>

    * src/document.cpp: bumped the update limit on documents a bit
	  (bug #896076)

    * src/sp-text.cpp: SPString now copes with parents that don't have style
	                   information (comment on bug #896706)

    * src/xml/repr.cpp, src/xml/repr-private.h:
	  adding listeners is now O(1), which should make files which make heavy
	  use of <use> more tolerable; I decided to add an extra "last" pointer
	  rather than just prepending to the list (which would have reversed
      its order, and make the common case for removal traverse the entire
	  list -- removal is still O(N) overall, but at least this way we usually
	  hit the best-case) (bug #896076)

2004-03-11  bulia byak <bulia@users.sourceforge.net>
